fixed side spacing issue in mobile layout

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     padding: 2rem;
+    border-bottom: 2px solid grey;
 }
 
 .footer-form{
