--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,27 +1,30 @@
-/* * {
-    box-sizing: border-box;
-} */
-
 .nav{
+    margin: 0;
     height: 5rem;
     background-color: rgb(0, 0, 0);
-    width: 100%;
+    width: auto;
     display: flex;
-    /* position: sticky;
-    top:0; */
     justify-content: space-between;
     align-items: center;
+    padding: 0 1rem;
 }
 
 .logo{
-    padding: 1rem;
+    height: 70%;
+    width: auto;
+}
+
+.logo img{
+    height: 100%;
 }
 
 .nav-buttons ul {
+    /* overflow-x: visible; */
     list-style: none;
     display: flex;
     gap: 1rem;
-    padding-right: 1rem;
+    /* background-color: #ce1a1e; */
+    /* padding-right: 1rem; */
 }
 
 .nav-buttons ul li button.login-btn{
@@ -55,6 +58,9 @@
 @media only screen and (max-width: 850px){
     .nav{
         height: 6rem;
+    }
+    .logo{
+        height: 15%;
     }
     .nav-buttons ul{
         width: 70vw;
